--- a/assets/main.css
+++ b/assets/main.css
@@ -72,6 +72,7 @@ i:hover{
   border-radius: 5px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
+  color: #4e4e4e;
 }
 
 .info-modal-icon {
